--- a/bm_catalogreducer/cartridge/static/default/css/cre.css
+++ b/bm_catalogreducer/cartridge/static/default/css/cre.css
@@ -62,6 +62,13 @@
 	padding-right: 3px;
 }
 
+#version-div {
+	margin-top: 30px; 
+	border: 1px solid #DADADA; 
+	background: #F5F5F5; 
+	padding: 4px;
+}
+
 /*** allCatalogs.isml ***/
 #catalogs-error {
 	color: red;
