Resolves #46 - Users now have ability to delete files and directories in UI

--- a/bm_catalogreducer/cartridge/static/default/css/cre.css
+++ b/bm_catalogreducer/cartridge/static/default/css/cre.css
@@ -108,3 +108,15 @@
 a.catalog-directory-arrow {
 	text-decoration: none;
 }
+
+.delete-directory-folder {
+	color: #B80000;
+	float: right;
+	cursor: pointer;
+}
+
+.delete-directory-file {
+	color: #B80000;
+	float: right;
+	cursor: pointer;
+}
