Minor UI changes to the recent catalog export div

--- a/bm_catalogreducer/cartridge/static/default/css/cre.css
+++ b/bm_catalogreducer/cartridge/static/default/css/cre.css
@@ -62,7 +62,7 @@
 	padding-right: 3px;
 }
 
-#version-div {
+#version-div, #load-catalog-exports-div {
 	margin-top: 30px; 
 	border: 1px solid #DADADA; 
 	background: #F5F5F5; 
