Resolves #49 - Only directory folders displayed in recent export section. Icon size increase for trash and folder

--- a/bm_catalogreducer/cartridge/static/default/css/cre.css
+++ b/bm_catalogreducer/cartridge/static/default/css/cre.css
@@ -112,6 +112,10 @@ a.catalog-directory-arrow {
 .delete-directory-folder {
 	color: #B80000;
 	cursor: pointer;
+	padding-top: 2px; 
+	padding-right: 3px; 
+	float: left; 
+	display: block;
 }
 
 .delete-directory-file {
