Cartridge refactoring and improve features
- Move from pipelines to controllers (and .ds to javascript modules)
- Move from old jobs to new job schedules
- Add a job schedule that can be ran automatically
- Add a way to export images with products (with configured view types)
- Add a way to zip the exported catalogs and their images to the IMPEX/src/instance folder (to be able to access it through the Site Import/Export BM page)

--- a/bm_catalogreducer/cartridge/static/default/css/cre.css
+++ b/bm_catalogreducer/cartridge/static/default/css/cre.css
@@ -19,16 +19,19 @@
 	color: red;
 }
 
-#csv-error {
+#csv-error,
+#imagesizes-error {
 	color: red;
 	font-size: 11px;
 }
 
-#csv-prods-row {
+#csv-prods-row,
+#images-size-row {
 	display: none;
 }
 
-#prodids {
+#prodids,
+#imagesizes {
 	width: 100%;
 }
 
@@ -121,4 +124,8 @@ a.catalog-directory-arrow {
 .delete-directory-file {
 	color: #B80000;
 	cursor: pointer;
+}
+
+.inner {
+	display: none;
 }
